[gd_scene load_steps=4 format=3 uid="uid://bnrw3ubjelnyr"]

[ext_resource type="Script" path="res://MiniGame/Ennemy/mgenemy.gd" id="1_14wjo"]
[ext_resource type="Texture2D" uid="uid://vpjddwa0r813" path="res://MiniGame/Textures/anims/scifi_marine_die_2.png" id="2_rypwm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qr2gd"]
radius = 38.0
height = 90.0

[node name="MgEnemy" type="Area2D" groups=["damageable"]]
script = ExtResource("1_14wjo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 30)
rotation = 3.13535
scale = Vector2(1.82812, 1.98438)
texture = ExtResource("2_rypwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5)
shape = SubResource("CapsuleShape2D_qr2gd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3, 5)
scale = Vector2(4.825, 4.65)

[node name="FiringPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(5, 52)

[node name="Gun" type="Node2D" parent="FiringPosition"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
